Add a sub-page for a recipe
Created and linked "Mac and cheese" page to the homepage also updated the homepage to have list.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ol>
+        <li><a href="./recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">Mac and Cheese</a></li>
+    </ol>
 </body>
 </html>
