--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ol>
+    <ul>
         <li><a href="./recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">Mac and Cheese</a></li>
-    </ol>
+        <li><a href="./recipes/roti.html" target="_blank" rel="noopener noreferrer">Roti</a></li>
+        <li><a href="./recipes/biryani.html" target="_blank" rel="noopener noreferrer">Biryani</a></li>
+    </ul>
 </body>
 </html>
