--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe Guide</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/mac-and-cheese.html" target="_blank" rel="noopener noreferrer">Mac and Cheese</a></li>
-        <li><a href="./recipes/roti.html" target="_blank" rel="noopener noreferrer">Roti</a></li>
-        <li><a href="./recipes/biryani.html" target="_blank" rel="noopener noreferrer">Biryani</a></li>
-    </ul>
+    <div>
+        <h1>Odin Recipes</h1>
+        <ul class="list">
+            <li><a href="./recipes/mac-and-cheese.html" rel="noopener noreferrer">Mac and Cheese</a></li>
+            <li><a href="./recipes/roti.html" rel="noopener noreferrer">Roti</a></li>
+            <li><a href="./recipes/biryani.html" rel="noopener noreferrer">Biryani</a></li>
+        </ul>
+    </div>
 </body>
 </html>
