--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biryani | My Recipe Guide</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Biryani</h1>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p><em>Biryani</em> is a mixed rice dish, mainly popular in South Asia. It is made with rice, some type of meat (preferably <strong>chicken</strong>) and spices. To cater to vegetarians, in some cases, it is prepared by substituting vegetables for the meat. Sometimes eggs and/or potatoes are also added.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="list one">
         <li>4 tablespoons vegetable oil, divided</li>
         <li>4 small potatoes, peeled and halved</li>
         <li>2 large onions, finely chopped</li>
@@ -32,7 +33,7 @@
         <li>2 ½ tablespoons vegetable oil</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="list two">
         <li>Heat 2 tablespoons of oil in a large skillet. Fry potatoes in hot oil until lightly browned, about 3 to 5 minutes. Remove to a paper towel-lined plate to drain; set aside.</li>
         <li>Add remaining 2 tablespoons of oil to the skillet. Add onions, garlic, and fresh ginger; cook and stir until onion is soft and golden. Add tomatoes, salt, cumin, chili powder, pepper, and turmeric; cook, stirring constantly, for 5 minutes.</li>
         <li>Stir in yogurt, mint, ground cardamom, and cinnamon stick. Cover and cook over low heat, stirring occasionally, until tomatoes are cooked to a pulp. It may be necessary to add a little hot water if mixture becomes too dry and starts to stick to the pan.</li>
@@ -44,5 +45,6 @@
         <li>Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or stirring.</li>
         <li>Spoon biryani onto a warm serving dish.</li>
     </ol>
+    <a href="../index.html">Go to HomePage</a>
 </body>
 </html>
