--- a/recipes/mac-and-cheese.html
+++ b/recipes/mac-and-cheese.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mac and Cheese | My Recipe Guide</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Mac and Cheese</h1>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p><em>Macaroni and cheese</em> (also known as mac and cheese in Canada and the United States and macaroni cheese in the United Kingdom) is a dish of macaroni and a cheese sauce, most commonly <strong>cheddar sauce</strong>.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="list one">
         <li>8 ounces uncooked elbow macaroni</li>
         <li>¼ cup salted butter</li>
         <li>3 tablespoons all-purpose flour</li>
@@ -21,7 +22,7 @@
         <li>salt and ground black pepper to taste</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="list two">
         <li>Preheat the oven to 350 degrees F (175 degrees C). Grease an 8-inch square baking dish.</li>
         <li>Make the macaroni and cheese: Bring a large pot of lightly salted water to a boil. Add macaroni and simmer, stirring occasionally, until tender yet firm to the bite, about 8 minutes; it will finish cooking in the oven. Drain and transfer to the prepared baking dish.</li>
         <li>While the macaroni is cooking, melt 1/4 cup butter in a medium skillet over low heat. Whisk in flour and stir until the mixture becomes paste-like and light golden brown, 3 to 5 minutes.</li>
@@ -29,5 +30,6 @@
         <li>Make the bread crumb topping: Melt 2 tablespoons butter in a skillet over medium heat. Add bread crumbs; cook and stir until well coated and browned. Spread bread crumbs over macaroni and cheese, then sprinkle with paprika.</li>
         <li>Bake in the preheated oven until topping is golden brown and macaroni and cheese is bubbling, about 30 minutes.</li>
     </ol>
+    <a href="../index.html">Go to HomePage</a>
 </body>
 </html>
