--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roti | My Recipe Guide</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Roti</h1>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p><em>Roti</em> is a round flatbread originating from the Indian subcontinent. It is commonly consumed in many South Asian, Southeast Asian, Caribbean, and Southeast African countries. It is made from stoneground whole wheat flour, traditionally known as <strong>gehu ka atta</strong>, and water that are combined into a dough.</p>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="list one">
         <li>1 cup whole wheat flour</li>
         <li>1 cup all-purpose flour</li>
         <li>1 teaspoon salt</li>
@@ -19,12 +20,13 @@
         <li>2 tablespoons olive oil or vegetable oil</li>
     </ul>
     <h3>Steps</h3>
-    <ol>
+    <ol class="list two"> 
         <li>Mix whole wheat flour, all-purpose flour, and salt in a large bowl. Use a wooden spoon to stir in water and oil. Mix until a soft, elastic dough forms and add more water, if needed.</li>
         <li>Knead dough on a lightly floured surface until smooth.</li>
         <li>Divide dough into 10 equal portions, or less if you want larger chapatis. Roll each piece into a ball and let rest for a few minutes.</li>
         <li>Heat a lightly greased skillet over medium heat. Use a rolling pin to roll dough balls out on a lightly floured surface until very thin.</li>
         <li>When the skillet starts to smoke, place a chapati in it. Cook until bottom has brown spots, about 30 seconds, then flip and cook 30 seconds more.</li>
     </ol>
+    <a href="../index.html">Go to HomePage</a>
 </body>
 </html>
