--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Odin Recipes</h1>
+    <div class="container">
+        <h1 class="title">RECIPES</h1>
+        <img src="https://images.pexels.com/photos/691114/pexels-photo-691114.jpeg?auto=compress&cs=tinysrgb&w=600" alt="utensils">
+        <p class="content">Here is an awesome collection of handpicked cuisines that will leave you wanting for more!</p>
         <ul class="list">
-            <li><a href="./recipes/mac-and-cheese.html" rel="noopener noreferrer">Mac and Cheese</a></li>
-            <li><a href="./recipes/roti.html" rel="noopener noreferrer">Roti</a></li>
             <li><a href="./recipes/biryani.html" rel="noopener noreferrer">Biryani</a></li>
+            <li><a href="./recipes/roti.html" rel="noopener noreferrer">Roti</a></li>
+            <li><a href="./recipes/mac-and-cheese.html" rel="noopener noreferrer">Mac and Cheese</a></li>
         </ul>
     </div>
 </body>
