--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="title">RECIPES</h1>
-        <img src="https://images.pexels.com/photos/691114/pexels-photo-691114.jpeg?auto=compress&cs=tinysrgb&w=600" alt="utensils">
+        <img class="homeimg" src="https://images.pexels.com/photos/691114/pexels-photo-691114.jpeg?auto=compress&cs=tinysrgb&w=600" alt="utensils">
         <p class="content">Here is an awesome collection of handpicked cuisines that will leave you wanting for more!</p>
         <ul class="list">
             <li><a href="./recipes/biryani.html" rel="noopener noreferrer">Biryani</a></li>
